src/objects/ADvendio__TextBlockMcAssignment__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__MediaCampaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Media Campaign</label>
        <referenceTo>ADvendio__MediaCampaign__c</referenceTo>
        <relationshipName>TextBlockMCAssignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__TextBlock__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Text Block</label>
        <referenceTo>ADvendio__TextBlock__c</referenceTo>
        <relationshipName>TextBlockMCAssignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Text Block MC Assignment</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__MediaCampaign__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TTA-{000000}</displayFormat>
        <label>Text Block MC Assignment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Text Block MC Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>